# UndergraduateCoursework

./: README.md
Year 1/CSD1171 - High-Level Programming 2/Assignment 1 - Text File Analyzer/: q-driver.cpp  q.cpp  q.hpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 2 - [Steganography using C-strings or std string]/: q-driver.cpp  q.cpp  q.hpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 3 - Battleship/: ocean.cpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 4 - Problem Solving with C++ std vector and std string/: pa.cpp  pa.hpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 5 - Battleship [with Data Abstraction and Encapsulation]/: ocean.cpp  ocean.h
Year 1/CSD1171 - High-Level Programming 2/Assignment 6 - vector Abstract Data Type/: vector.cpp  vector.hpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 7 - Class templates [Implementing a generic vector ADT]/: vct.hpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 8 - Singly-Linked List Class Template/: sllist.hpp  sllist.tpp
Year 1/CSD1171 - High-Level Programming 2/Assignment 9 - Using STL To Solve Real-World Problems/: spelling-driver.cpp  spelling.cpp  spelling.hpp  test1.txt  test2.txt  test3.txt  test4.txt  testall.txt
Year 1/CSD1171 - High-Level Programming 2/Lab 1 - Transitioning From C to C++ [Part 1 - File IO]/: sample-wc.out  wc-driver.cpp  wc.cpp  wc.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 10 - More Problem Solving with C++ stdvector and stdstrings/: 001-output.txt  002-output.txt  002.txt  003-output.txt  004-output.txt  004.txt  005-output.txt  005.txt  007-output.txt  008-output.txt  009-output.txt  010-output.txt  011-output.txt  014-output.txt  pa.cpp  pa.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 11 - Object-Oriented Programming; Inheritance; Run-Time Polymorphism/: ellipse.cpp  polygon.cpp  process.cpp  shape.cpp
Year 1/CSD1171 - High-Level Programming 2/Lab 2 - Transitioning from C to C++ Lvalue References and File IO/: q-driver.cpp  q.cpp  q.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 3 - Problem-Solving with C++ Strings/: q.cpp  q.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 4 - Interface and Implementation Methodology with Singly-Linked Lists/: sllist.cpp  sllist.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 5 - Class Design and Implementation/: point.cpp  point.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 6 - Function templates and half-open ranges/: ft.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 7 - Data Abstraction and Encapsulation of Singly-Linked List using Classes/: listint.cpp  listint.hpp
Year 1/CSD1171 - High-Level Programming 2/Lab 8 - Class templates [Cloning container std array]/: array.hpp  array.tpp
Year 1/CSD1171 - High-Level Programming 2/Lab 9 - Error Flags and Exceptions/: test.hpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/: CMakeLists.txt  csd2101.bat
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/assignment-1/include/: glhelper.h  glpbo.h  objparser.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/assignment-1/src/: glhelper.cpp  glpbo.cpp  main-pbo.cpp  objparser.cpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/assignment-2/include/: glhelper.h  glpbo.h  glslshader.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/assignment-2/src/: glhelper.cpp  glpbo.cpp  main-pbo.cpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-0/include/: glapp.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-0/src/: glapp.cpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-1/include/: glapp.h  glhelper.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-1/src/: glapp.cpp  glhelper.cpp  main.cpp  my-tutorial-1.vert
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-2/include/: glapp.h  glhelper.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-2/src/: glapp.cpp  glhelper.cpp  glslshader.cpp  my-tutorial-2.vert
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-3/include/: glapp.h  glhelper.h  glslshader.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-3/src/: glapp.cpp  glhelper.cpp  my-black.frag  my-blue.frag  my-green.frag  my-pulse.frag  my-red.frag
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-4/include/: glapp.h  glhelper.h  glslshader.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-4/shaders/: my-tutorial-4.frag  my-tutorial-4.vert
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-4/src/: glapp.cpp  glhelper.cpp  glslshader.cpp  main.cpp  my-tutorial-3.frag  my-tutorial-3.vert
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-5/include/: glapp.h  glhelper.h  glslshader.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-5/shaders/: my-tutorial-5.frag  my-tutorial-5.vert
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-5/src/: glapp.cpp  glhelper.cpp  glslshader.cpp  main.cpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-6/include/: glhelper.h  glpbo.h  glslshader.h
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/projects/tutorial-6/src/: glhelper.cpp  glpbo.cpp  glslshader.cpp  main-pbo.cpp
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-opengl-dev/scenes/: tutorial-4.scn
Year 1/CSD2101 - Introduction to Computer Graphics/csd2101-project/: CMakeLists.txt  csd2101-project.bat
Year 2/CSD2126 - Modern C++ Design Patterns/Assignment 3 - Class Template Puzzle/: ptr-driver.cpp  (+1 more)
(+481 files in other folders)
